--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ header h1 {
   font-size: 4rem;
   font-weight: 800;
   color: #ffffff;
+  margin-top: 1rem;
   margin-bottom: 0;
 }
 header h2 {
@@ -74,12 +75,14 @@ header span {
       -ms-flex-align: center;
           align-items: center;
   gap: 1rem;
+  width: 80vw;
+  margin: 0 auto;
 }
 .experience a {
   padding: 5rem;
   background: #5352ed;
-  width: 28vw;
-  height: 3rem;
+  width: 25rem;
+  height: 8rem;
   border-radius: 0.75rem;
   -webkit-box-shadow: -0.25rem 0.25rem 0 #70a1ff;
           box-shadow: -0.25rem 0.25rem 0 #70a1ff;
@@ -100,4 +103,35 @@ header span {
 p {
   font-family: "Noto Sans";
   font-size: 1.25rem;
+}
+
+footer {
+  background: #57606f;
+  padding: 1.25rem;
+  position: absolute;
+  width: 50%;
+  left: 25%;
+  bottom: 0.4rem;
+  border-radius: 0.75rem;
+  -webkit-box-shadow: -0.25rem 0.25rem 0 #747d8c;
+          box-shadow: -0.25rem 0.25rem 0 #747d8c;
+}
+footer div {
+  position: absolute;
+  top: 20%;
+  right: 0;
+  margin: 1rem;
+  width: 25%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+footer div img {
+  width: 2.5rem;
 }
