--- a/sass/main.sass
+++ b/sass/main.sass
@@ -35,6 +35,7 @@ header
         font-size: 4rem
         font-weight: 800
         color: #ffffff
+        margin-top: 1rem
         margin-bottom: 0
     h2
         text-align: center
@@ -59,11 +60,13 @@ header
     justify-content: center
     align-items: center
     gap: 1rem
+    width: 80vw
+    margin: 0 auto
     a
         padding: 5rem
         background: #5352ed
-        width: 28vw
-        height: 3rem
+        width: 25rem
+        height: 8rem
         border-radius: 0.75rem
         box-shadow: -0.25rem 0.25rem 0 #70a1ff
         color: white
@@ -81,3 +84,26 @@ p
     font-family: "Noto Sans"
     font-size: 1.25rem
 
+footer
+    background: #57606f
+    padding: 1.25rem
+
+    position: absolute
+    width: 50%
+    left: 25%
+    bottom: 0.4rem
+    
+    border-radius: 0.75rem
+    box-shadow: -0.25rem 0.25rem 0 #747d8c
+    div
+        position: absolute
+        top: 20%
+        right: 0
+        margin: 1rem
+        width: 25%
+
+        display: flex
+        justify-content: space-between
+        align-items: center
+        img
+            width: 2.5rem
