--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,7 @@ header span {
   gap: 1rem;
   width: 80vw;
   margin: 0 auto;
+  margin-bottom: 2rem;
 }
 .experience a {
   padding: 5rem;
@@ -105,23 +106,118 @@ p {
   font-size: 1.25rem;
 }
 
+.contact {
+  width: 65rem;
+  margin: 0 auto;
+  background: #ff6348;
+  padding: 2.5rem;
+  border-radius: 0.75rem;
+  -webkit-box-shadow: -0.25rem 0.25rem 0 #eccc68;
+          box-shadow: -0.25rem 0.25rem 0 #eccc68;
+}
+
+.contact h2 {
+  text-align: center;
+  font-size: 2rem;
+  margin: 0;
+}
+
+form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-size: 1.25rem;
+}
+
+form div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+form label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 1.5rem;
+}
+
+form div input {
+  width: 20rem;
+}
+
+form input {
+  background: white;
+  border: 0.25rem solid #eccc68;
+  width: 15rem;
+  color: #2f3542;
+  font-family: "Noto Sans", Tahoma, Verdana, Helvetica;
+  font-size: 1.25rem;
+  padding: 1rem;
+  -webkit-transition: 0.15s ease-in-out;
+  transition: 0.15s ease-in-out;
+}
+
+form textarea {
+  background: white;
+  border: 0.25rem solid #eccc68;
+  height: 15rem;
+  color: #2f3542;
+  font-family: "Noto Sans", Tahoma, Verdana, Helvetica;
+  font-size: 1.25rem;
+  padding: 1rem;
+  -webkit-transition: 0.15s ease-in-out;
+  transition: 0.15s ease-in-out;
+  resize: none;
+}
+
+input:focus, textarea:focus {
+  outline: 0.15rem solid #eccc68;
+}
+
+.submit:hover {
+  background: #f1f2f6;
+  cursor: pointer;
+  outline: 0.15rem solid #eccc68;
+}
+
 footer {
   background: #57606f;
   padding: 1.25rem;
-  position: absolute;
-  width: 50%;
-  left: 25%;
-  bottom: 0.4rem;
+  width: 50vw;
+  margin: 0 auto;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
   border-radius: 0.75rem;
   -webkit-box-shadow: -0.25rem 0.25rem 0 #747d8c;
           box-shadow: -0.25rem 0.25rem 0 #747d8c;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 footer div {
-  position: absolute;
-  top: 20%;
-  right: 0;
-  margin: 1rem;
-  width: 25%;
+  width: 10vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
