--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,3 +1,5 @@
+// Fonts
+    
 @font-face 
     font-family: "Noto Sans"
     src: url("../fonts/Noto_Sans/NotoSans-Regular.ttf") format("truetype")
@@ -29,6 +31,8 @@ body
     color: #f1f2f6
     font-family: "Noto Sans", Tahoma, Verdana, Helvetica
 
+// Header
+
 header
     h1
         text-align: center
@@ -44,6 +48,8 @@ header
     span
         font-weight: 800
         color: #ffffff
+
+// Main Page
 
 #about
     margin: 0 15% 0 15%
@@ -62,6 +68,7 @@ header
     gap: 1rem
     width: 80vw
     margin: 0 auto
+    margin-bottom: 2rem
     a
         padding: 5rem
         background: #5352ed
@@ -84,23 +91,87 @@ p
     font-family: "Noto Sans"
     font-size: 1.25rem
 
+// Contact
+.contact
+    width: 65rem
+    margin: 0 auto
+
+    background: #ff6348
+    padding: 2.5rem
+    border-radius: 0.75rem
+    box-shadow: -0.25rem 0.25rem 0 #eccc68
+
+.contact h2
+    text-align: center
+    font-size: 2rem
+    margin: 0
+form
+    display: flex
+    justify-content: center
+    flex-direction: column
+    font-size: 1.25rem
+
+form div
+    display: flex
+    justify-content: space-between
+    flex-direction: row
+
+form label
+    display: flex
+    flex-direction: column
+    margin-bottom: 1.5rem
+
+form div input
+    width: 20rem
+
+form input
+    background: white
+    border: 0.25rem solid #eccc68
+    width: 15rem
+    color: #2f3542
+    font-family: "Noto Sans", Tahoma, Verdana, Helvetica
+    font-size: 1.25rem
+    padding: 1rem
+    transition: 0.15s ease-in-out
+
+form textarea
+    background: white
+    border: 0.25rem solid #eccc68
+    height: 15rem
+    color: #2f3542
+    font-family: "Noto Sans", Tahoma, Verdana, Helvetica
+    font-size: 1.25rem
+    padding: 1rem
+    transition: 0.15s ease-in-out
+
+    resize: none
+
+input:focus, textarea:focus
+    outline: 0.15rem solid #eccc68
+
+.submit:hover
+    background: #f1f2f6
+    cursor: pointer
+    outline: 0.15rem solid #eccc68
+
+// Footer
+
 footer
     background: #57606f
     padding: 1.25rem
 
-    position: absolute
-    width: 50%
-    left: 25%
-    bottom: 0.4rem
+    width: 50vw
+    margin: 0 auto
+    margin-top: 2rem
+    margin-bottom: 1rem
     
     border-radius: 0.75rem
     box-shadow: -0.25rem 0.25rem 0 #747d8c
+
+    display: flex
+    justify-content: space-between
     div
-        position: absolute
-        top: 20%
-        right: 0
-        margin: 1rem
-        width: 25%
+        width: 10vw
 
         display: flex
         justify-content: space-between
