--- a/sass/main.sass
+++ b/sass/main.sass
@@ -34,6 +34,7 @@ body
 // Header
 
 header
+    padding-bottom: 1rem
     h1
         text-align: center
         font-size: 4rem
@@ -45,6 +46,7 @@ header
         text-align: center
         font-style: italic
         font-weight: 100
+        margin: 0 2.5rem 0 2.5rem
     span
         font-weight: 800
         color: #ffffff
@@ -66,14 +68,14 @@ header
     justify-content: center
     align-items: center
     gap: 1rem
-    width: 80vw
+    width: 75vw
     margin: 0 auto
     margin-bottom: 2rem
     a
         padding: 5rem
         background: #5352ed
-        width: 25rem
-        height: 8rem
+        width: 18rem
+        height: 6.5rem
         border-radius: 0.75rem
         box-shadow: -0.25rem 0.25rem 0 #70a1ff
         color: white
