--- a/sass/mobile.sass
+++ b/sass/mobile.sass
@@ -26,4 +26,22 @@
             div
                 text-align: center
 
-        
+    .contact
+        width: 80vw
+        form
+            input
+                width: 7rem
+                padding: 0.5rem
+                font-size: 1rem
+            textarea
+                padding: 0.5rem
+                font-size: 1rem
+
+    footer
+        width: 75vw 
+        flex-direction: column
+        p
+            font-size: 1rem
+            text-align: center
+        div
+            width: 100%
