Adjusted textarea size

--- a/sass/mobile.sass
+++ b/sass/mobile.sass
@@ -36,6 +36,7 @@
             textarea
                 padding: 0.5rem
                 font-size: 1rem
+                height: 10rem
 
     footer
         width: 75vw 
