Spacing adjustments for the mobile layout

--- a/sass/mobile.sass
+++ b/sass/mobile.sass
@@ -10,15 +10,16 @@
     #about
         margin: 0 2% 0 2%
         margin-bottom: 1rem
-        padding: 0.5rem
+        padding: 0.75rem
         p
             font-size: 1.15rem
     
     .experience
         width: 95vw
+        margin-bottom: 1.5rem
         a
-            width: 9rem
-            height: 7rem
+            width: 10rem
+            height: 8rem
             padding: 0
             display: flex
             align-items: center
@@ -27,8 +28,14 @@
                 text-align: center
 
     .contact
-        width: 80vw
+        width: 90vw
+        padding: 0.75rem
+        h2
+            padding-bottom: 0.25rem
         form
+            div
+                label
+                    margin-bottom: 0.5rem
             input
                 width: 7rem
                 padding: 0.5rem
