--- a/css/mobile.css
+++ b/css/mobile.css
@@ -14,7 +14,7 @@
   #about {
     margin: 0 2% 0 2%;
     margin-bottom: 1rem;
-    padding: 0.5rem;
+    padding: 0.75rem;
   }
   #about p {
     font-size: 1.15rem;
@@ -22,10 +22,11 @@
 
   .experience {
     width: 95vw;
+    margin-bottom: 1.5rem;
   }
   .experience a {
-    width: 9rem;
-    height: 7rem;
+    width: 10rem;
+    height: 8rem;
     padding: 0;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -42,7 +43,14 @@
   }
 
   .contact {
-    width: 80vw;
+    width: 90vw;
+    padding: 0.75rem;
+  }
+  .contact h2 {
+    padding-bottom: 0.25rem;
+  }
+  .contact form div label {
+    margin-bottom: 0.5rem;
   }
   .contact form input {
     width: 7rem;
