--- a/sass/halfScreen.sass
+++ b/sass/halfScreen.sass
@@ -28,3 +28,37 @@
         width: 75vw
         div
             width: 25vw
+
+    .education, .projects
+        margin: 0 auto
+        gap: 2rem
+        div
+            width: 77vw
+            padding: 0.75rem
+            padding: 0.25rem 0.75rem
+            h3
+                font-size: 1.65rem
+                text-align: center
+                width: 100%
+                background: #57606f
+                padding: 1rem 0 1rem 0
+                margin-top: 1rem
+                border-radius: 0.75rem
+                box-shadow: -0.25rem 0.25rem 0 #a4b0be
+
+    .projects
+        flex-wrap: wrap
+        justify-content: center
+        div
+            width: 75vw
+            margin: 0.75rem 0
+            div
+                .carousel
+                    margin: 1rem auto
+                    max-width: 65vw
+                    width: auto
+
+    #plus
+        text-align: center
+        padding: 0
+        margin: 1rem 0
