--- a/css/halfScreen.css
+++ b/css/halfScreen.css
@@ -38,4 +38,48 @@
   footer div {
     width: 25vw;
   }
+
+  .education, .projects {
+    margin: 0 auto;
+    gap: 2rem;
+  }
+  .education div, .projects div {
+    width: 77vw;
+    padding: 0.75rem;
+    padding: 0.25rem 0.75rem;
+  }
+  .education div h3, .projects div h3 {
+    font-size: 1.65rem;
+    text-align: center;
+    width: 100%;
+    background: #57606f;
+    padding: 1rem 0 1rem 0;
+    margin-top: 1rem;
+    border-radius: 0.75rem;
+    -webkit-box-shadow: -0.25rem 0.25rem 0 #a4b0be;
+            box-shadow: -0.25rem 0.25rem 0 #a4b0be;
+  }
+
+  .projects {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .projects div {
+    width: 75vw;
+    margin: 0.75rem 0;
+  }
+  .projects div div .carousel {
+    margin: 1rem auto;
+    max-width: 65vw;
+    width: auto;
+  }
+
+  #plus {
+    text-align: center;
+    padding: 0;
+    margin: 1rem 0;
+  }
 }
