--- a/sass/mobile.sass
+++ b/sass/mobile.sass
@@ -53,3 +53,49 @@
             text-align: center
         div
             width: 100%
+
+    .education, .projects
+        margin: 0
+        padding: 0
+        width: 95vw
+        justify-content: center
+        margin: 0 auto
+        div
+            width: 90vw
+            padding: 0.5rem
+            margin: 0
+            gap: 0.5rem
+            h3
+                font-size: 1.3rem
+                margin: 0
+                padding: 0.25rem 0 0.25rem 0
+
+            div
+                flex-direction: column
+                padding: 0
+                margin: 0
+                .description, .info
+                    width: 100%
+                    padding: 0
+                    margin: 0
+                    p
+                        font-size: 0.95rem
+                        padding: 0rem 0 0 0.5rem
+                .info
+                    gap: 1rem
+                    padding: 0.25rem 0 0.25rem 0
+                    h4
+                        padding: 0.25rem 0 0.25rem 0
+                        text-align: center
+                        width: 100%
+                    div
+                        margin: 0
+                        padding: 0
+                        p
+                            font-size: 0.95rem
+                            margin: 0
+                    .inprogress
+                        background: none
+                        box-shadow: none
+                        padding: 0
+                        margin: 0
