--- a/sass/mobile.sass
+++ b/sass/mobile.sass
@@ -54,7 +54,7 @@
         div
             width: 100%
 
-    .education, .projects
+    .education, .projects, .work
         margin: 0
         padding: 0
         width: 95vw
@@ -99,3 +99,16 @@
                         box-shadow: none
                         padding: 0
                         margin: 0
+    .work
+        padding: 0
+        div
+            margin: 0
+            gap: 0.5rem
+            .description
+                width: 100%
+            .responsibilities
+                padding: 0 !important
+                margin: 0
+                p
+                    font-size: 0.95rem
+                    padding: 0 0.5rem
