--- a/sass/halfScreen.sass
+++ b/sass/halfScreen.sass
@@ -29,7 +29,7 @@
         div
             width: 25vw
 
-    .education, .projects
+    .education, .projects, .work
         margin: 0 auto
         gap: 2rem
         div
@@ -62,3 +62,17 @@
         text-align: center
         padding: 0
         margin: 1rem 0
+
+    .work
+        div
+            padding: 1rem
+            padding-top: 0
+            div
+                padding: 0
+                margin: 0
+                gap: 1rem
+                .description
+                    width: 25vw
+                .responsibilities
+                    padding: 1rem
+                    margin: 0
