--- a/sass/main.sass
+++ b/sass/main.sass
@@ -62,6 +62,8 @@ header
     border-radius: 0.75rem
     box-shadow: -0.25rem 0.25rem 0 #eccc68
     margin-bottom: 2rem
+    p
+        color: white
 
 .experience
     display: flex
