--- a/css/main.css
+++ b/css/main.css
@@ -460,3 +460,60 @@ footer div img {
   margin: 0;
   padding: 1rem;
 }
+
+.experienceSmall {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 1rem;
+  width: 75vw;
+  margin: 0 auto;
+  margin-bottom: 1rem;
+}
+.experienceSmall a {
+  padding: 0.25rem;
+  background: #5352ed;
+  width: 12rem;
+  height: 0.75rem;
+  border-radius: 0.75rem;
+  -webkit-box-shadow: -0.25rem 0.25rem 0 #70a1ff;
+          box-shadow: -0.25rem 0.25rem 0 #70a1ff;
+  color: white;
+  text-decoration: none;
+  font-weight: 800;
+  font-size: 1rem;
+  text-align: center;
+  vertical-align: middle;
+  -webkit-transition: 0.1s ease-in-out;
+  transition: 0.1s ease-in-out;
+  border: 0.25rem solid #5352ed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.experienceSmall a p {
+  font-size: 1rem;
+}
+.experienceSmall a:hover {
+  border: 0.25rem solid white;
+  -webkit-box-shadow: 0 0 0.5rem white, -0.25rem 0.25rem 0 #70a1ff;
+          box-shadow: 0 0 0.5rem white, -0.25rem 0.25rem 0 #70a1ff;
+}
