--- a/sass/main.sass
+++ b/sass/main.sass
@@ -328,3 +328,39 @@ footer
                 padding: 0
                 margin: 0
                 padding: 1rem
+    
+.experienceSmall
+    display: flex
+    flex-direction: row
+    flex-wrap: wrap
+    justify-content: center
+    align-items: center
+    gap: 1rem
+    width: 75vw
+    margin: 0 auto
+    margin-bottom: 1rem
+    a
+        padding: 0.25rem
+        background: #5352ed
+        width: 12rem
+        height: 0.75rem
+        border-radius: 0.75rem
+        box-shadow: -0.25rem 0.25rem 0 #70a1ff
+        color: white
+        text-decoration: none
+        font-weight: 800
+        font-size: 1rem
+        text-align: center
+        vertical-align: middle
+
+        transition: 0.1s ease-in-out
+        border: 0.25rem solid #5352ed
+
+        display: flex
+        align-items: center
+        justify-content: center
+        p
+            font-size: 1rem
+    a:hover
+        border: 0.25rem solid white
+        box-shadow: 0 0 0.5rem white, -0.25rem 0.25rem 0 #70a1ff
