--- a/css/main.css
+++ b/css/main.css
@@ -418,6 +418,7 @@ footer div img {
   color: #ff4757;
 }
 .projects div div .carousel {
+  background: #57606f;
   width: 30rem;
   padding: 0;
   margin: 0 auto;
@@ -430,6 +431,15 @@ footer div img {
 .projects div div .carousel img {
   width: 100%;
   border-radius: 0.75rem;
+}
+.projects div div .carousel div {
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+.projects div div .carousel div img {
+  width: 28rem;
+  margin: 0;
 }
 .projects div div iframe {
   border-radius: 0.75rem;
@@ -516,4 +526,18 @@ footer div img {
   border: 0.25rem solid white;
   -webkit-box-shadow: 0 0 0.5rem white, -0.25rem 0.25rem 0 #70a1ff;
           box-shadow: 0 0 0.5rem white, -0.25rem 0.25rem 0 #70a1ff;
+}
+
+.slick-slide {
+  height: 100% !important;
+  display: inline-block !important;
+  vertical-align: middle !important;
+}
+.slick-slide img {
+  width: 100% !important;
+}
+
+.slick-list {
+  width: 100% !important;
+  margin: 0 auto !important;
 }
