--- a/sass/main.sass
+++ b/sass/main.sass
@@ -296,6 +296,7 @@ footer
                     text-decoration: none
                     color: #ff4757
             .carousel // Project Carousel
+                background: #57606f
                 width: 30rem
                 padding: 0
                 margin: 0 auto
@@ -306,6 +307,13 @@ footer
                 img
                     width: 100%
                     border-radius: 0.75rem
+                div
+                    display: block
+                    margin: 0
+                    padding: 0
+                    img
+                        width: 28rem
+                        margin: 0
             iframe
                 border-radius: 0.75rem
                 margin: 0 auto
@@ -364,3 +372,14 @@ footer
     a:hover
         border: 0.25rem solid white
         box-shadow: 0 0 0.5rem white, -0.25rem 0.25rem 0 #70a1ff
+
+.slick-slide
+    height: 100% !important
+    display: inline-block !important
+    vertical-align: middle !important
+    img
+        width: 100% !important
+
+.slick-list
+    width: 100% !important
+    margin: 0 auto !important
